Fix header & main alignment

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,16 @@ body {
     display: flex;
     flex-direction: column;
 }
-header {
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+}
+header {
     background-color: #1f2937;
     color: #f9faf8;
-    padding: 18px;
+    padding: 24px;
 }
 .left {
     display: flex;
@@ -16,7 +20,7 @@ header {
 }
 .right {
     display: flex;
-    gap: 16px;
+    gap: 12px;
     padding: 0;
     margin: 0;
 }
@@ -31,11 +35,8 @@ a {
 main {
     background-color: #1f2937;
     color: #f9faf8;
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .content {
     display: flex;
@@ -43,16 +44,14 @@ main {
     margin: 0;
     flex-direction: column;
     text-wrap: wrap;
-    width: 500px;
-    height: 340px;
+    flex: 1;
 
 }
 .main-image {
     display: flex;
     align-items: center;
     margin: 0;
-    width: 500px;
-    height: 340px;
+    flex: 1;
 }
 .main-button {
     flex-shrink: 2;
@@ -60,13 +59,13 @@ main {
     border: none;
     border-radius: 6px;
     width: 20%;
-    height: 10%;
+    height: 20%;
     color: #f9faf8;
     font-weight: 800;
 }
 .cool-picture {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 95%;
 }
 h1 {
     font-size: 48px;
